@@ -52,8 +52,8 @@ void         xaccAccountBeginEdit (Account *, int defer);
 void         xaccAccountCommitEdit (Account *);
 
 kvp_value * xaccAccountGetSlot(Account * account, const char * key);
-void      xaccAccountSetSlot(Account * account, const char * key, 
-                             const kvp_value * value);
+void        xaccAccountSetSlot(Account * account, const char * key, 
+                               const kvp_value * value);
 
 /*
  * The xaccAccountGetGUID() subroutine will return the
